# industrial-hmi

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitattributes  .gitignore  BUILD.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Dockerfile  Doxyfile  LICENSE  LINUX_BUILD.md  PORTFOLIO_SUMMARY.md  README.md  SECURITY.md  WINDOWS_BUILD.md  WINDOWS_REFACTORING_CHANGELOG.md  asan_suppressions.txt  build-linux.sh  build-windows.sh  docker-compose.yml  enable-auth.sh  package-linux.sh  package-windows.sh  products.csv  tsan.supp  valgrind.supp  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  profiling.yml  release.yml
assets/styles/: adwaita-theme.css  dashboard.css  inspection.css  products.css  sidebar.css
assets/ui/: dashboard-page.ui  inspection-page.ui  main-window-blueprint.ui  main-window-multistation.ui  main-window-right.ui  main-window.ui  products-page.ui  settings-page.ui
benchmarks/: CMakeLists.txt  README.md  bench_alert_center.cpp  bench_config_parse.cpp  bench_modbus_pdu.cpp
cmake/: FindOnnxRuntime.cmake
config/: app-config.json
docker/: app-config.docker.json  mosquitto.conf
docs/: ARCHITECTURE.md  CHEAT_SHEET.md  CODE_EXAMPLES.md  INTEGRATION_PROTOCOL.md  INTEGRATION_ROADMAP.md  INTERVIEW_GUIDE.md  USAGE.md  VIEW_LAYER.md  VSCODE_COMMANDS.md  WINDOWS_BUILD_SETUP.md
docs/adr/: 0001-mvp-layer-boundaries.md  0002-two-frontends-one-main.md  0003-observer-pattern-not-sigc.md  0004-staged-bootstrap.md  0005-integration-backend-interface.md  0006-auth-defense-in-depth.md  0007-historian-degraded-open.md  0008-runtime-palette-layout-swap.md  0009-ml-plugin-conditional-compile.md  0010-config-policy-vs-mechanism.md  0011-multi-station-support.md  0012-requirements-traceability.md  0013-openfasttrace-adoption.md  0014-result-at-boundaries-not-everywhere.md  0015-nlohmann-json-and-cpp-validator.md  0016-profiling-microbench-and-callgrind.md  0017-reject-timesource-injection-everywhere.md  0018-spsc-lock-free-queue.md  README.md
docs/design/: multi-station-master-slave.md  multi-station-primary-secondary.md
docs/requirements/: REQUIREMENTS.md  TRACEABILITY.md
examples/: README.md  factory_simulation.py  modbus_slave_simulator.py  mqtt_publish_sensor.py  mqtt_sensor_loop.py  mqtt_subscribe_telemetry.py  opcua_dashboard.py  opcua_invoke_method.py  opcua_read_state.py  opcua_subscribe_equipment.py  requirements.txt  tcp_control.py  tcp_operator_session.py
fuzzers/: CMakeLists.txt  README.md  fuzz_modbus_decode.cpp  fuzz_mqtt_publish.cpp  fuzz_mqtt_remaining_length.cpp
logs/: README.md
po/: LINGUAS  POTFILES.in  de.po  es.po  es_MX.po  fi.po  fr.po  ga.po  industrial-hmi.pot  it.po  pt.po  pt_BR.po  sv.po
schemas/: app-config.schema.json
scripts/: check-traceability.sh  inject-startup-translations.py  setup-onnxruntime.sh  win-build-run.sh
scripts/ml/: README.md  benchmark.py  export_labels.py  export_model.py  quantize_model.py  requirements.txt  sanity_check.py
scripts/perf/: .gitignore  README.md  baseline-alarm-storm.callgrind-annotate.top50.txt  baseline.callgrind-annotate.top50.txt  capture-callgrind.sh  diff-baseline.sh  workload-alarm-storm.txt  workload-baseline.txt
src/: main.cpp
src/auth/: Argon2PasswordHasher.cpp  Argon2PasswordHasher.h  AuditEvent.h  AuditLogger.h  AuthService.cpp  AuthService.h  AvatarPlaceholder.cpp  AvatarPlaceholder.h  PasswordHasher.h  README.md  Role.h  Session.h  SqliteAuditLogger.cpp  SqliteAuditLogger.h  SqliteUserRepository.cpp  SqliteUserRepository.h  User.h  UserRepository.h
src/config/: ConfigFileWatcher.cpp  ConfigFileWatcher.h  ConfigManager.cpp  ConfigManager.h  ConfigValidator.cpp  ConfigValidator.h  README.md  config_defaults.h
src/console/: ConsoleView.cpp  ConsoleView.h  InitConsole.cpp  InitConsole.h
src/core/: Application.cpp  Application.h  Bootstrap.cpp  Bootstrap.h  CsvSerializer.cpp  CsvSerializer.h  ErrorHandling.h  ExceptionHandler.h  LoggerBase.h  LoggerImpl.h  README.md  Result.h  SpscQueue.h  StartupDialog.cpp  StartupDialog.h  StartupErrors.h  TimeFormat.cpp  TimeFormat.h  i18n.cpp  i18n.h
src/historian/: HistorianBridge.cpp  HistorianBridge.h  HistorianMaintenance.cpp  HistorianMaintenance.h  HistoryReader.h  HistoryRecord.h  README.md  (+3 more)
tests/: AlertCenterModelIntegrationTest.cpp  AlertCenterTest.cpp  AlertsPanelTest.cpp  Argon2PasswordHasherTest.cpp  AuthAuditIntegrationTest.cpp  AuthServiceTest.cpp  AvatarPlaceholderTest.cpp  BackendHealthPresenterTest.cpp  BasePresenterTest.cpp  BigNumberCardTest.cpp  CMakeLists.txt  ConfigFileWatcherTest.cpp  ConfigManagerTest.cpp  ConfigValidatorTest.cpp  CsvSerializerTest.cpp  DashboardPageTest.cpp  DashboardPresenterIntegrationTest.cpp  DashboardPresenterTest.cpp  DatabaseManagerTest.cpp  DialogHelpersTest.cpp  DialogManagerTest.cpp  DonutChartWidgetTest.cpp  ExceptionHandlerTest.cpp  FactoryCommandSinkTest.cpp  FactoryNodeMapTest.cpp  HistorianBridgeTest.cpp  HistorianDegradedOpenTest.cpp  HistorianMaintenanceTest.cpp  HistorianRoundTripIntegrationTest.cpp  HistoryPageTest.cpp  HistoryPageToggleTest.cpp  I18nTest.cpp  ImageClassifierTest.cpp  ImageDecoderTest.cpp  ImageNetLabelsTest.cpp  ImageNetPreprocessorTest.cpp  IngestBridgeRealModelIntegrationTest.cpp  IntegrationManagerTest.cpp  JsonSerializerTest.cpp  LoggerImplTest.cpp  (+50 more)
tests/mocks/: MockDialogManager.h  MockProductionModel.h  MockProductsRepository.h  MockRecipesRepository.h  MockRecipesWriter.h
tests/scenarios/: alerts-and-dismiss.expected  alerts-and-dismiss.txt  boot-and-quit.expected  equipment-toggle.expected  equipment-toggle.txt  error-paths.expected  error-paths.txt  full-cycle.expected  full-cycle.txt  help-and-unknown.expected  help-and-unknown.txt  products-list.expected  products-list.txt  run-scenario.cmake  start-stop-cycle.expected  start-stop-cycle.txt  status-snapshot.expected  view-product.expected  view-product.txt
ui/: adwaita-theme.css  dashboard-page.ui  dashboard.css  main-window.ui  products-page.ui  products.css  sidebar.css
(+185 files in other folders)
